feat: fees feature
